syntax="proto3";

package contacts;

message org
{
	string    id = 1;
    string    name = 2;
	string    name_global = 3;
	string    pinyin = 4;
	string    parent_id = 5;
	int32     sort_order = 6;
}

message user{
	string    id = 1;
    string    real_name = 2;
	string    name_global = 3;
	string    pinyin = 4;
	string    mobile = 5;
	string    email = 6;
	string    parent_id = 7;
	int32 	  has_head = 8;
    int32     sort_order = 9;
}

message orgs{
    int32 lastQueryTime = 1;
    repeated org orgs = 2;
    string rootID = 3;
}

message users{
	int32 lastQueryTime = 1;
	repeated user users = 2;
}